# d-done

./: .dockerignore  .gitignore  cloudbuild.backend.yaml  package-lock.json  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  gcs-cors.json  pyproject.toml  requirements.txt  tabu_schema_temp.json
backend/alembic/: env.py
backend/alembic/versions/: 001_schema_baseline.py  002_project_transaction_type.py
backend/app/: main.py
backend/app/agents/: __init__.py  constants.py  doc_classifier_agent.py  inject_utils.py  schemas.py  session_store.py  utils.py  visual_grounding_pipeline_agent.py  visual_grounding_synthesis.py
backend/app/api/: admin.py  analysis.py  auth.py  bbox_lab.py  invites.py  organization.py  projects.py  settings.py  upload.py
backend/app/core/: audit.py  auth.py  authorization.py  config.py  constants.py  descope_client.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/schemas/: __init__.py  project_create.py
backend/app/services/: ai_prompts.py  email.py  failure_logging.py  gcs.py  pdf_export.py  text_extractor.py  word_export.py
backend/app/templates/: invite_email.html
backend/eval/: README.md  capture_golden.py  config.py  conftest.py  test_extractors.py
backend/eval/agreement_eval_agent/: __init__.py  agreement.test.json
backend/eval/company_docs_eval_agent/: __init__.py  test_config.json  (+1 more)
backend/scripts/: grant-secret-access.sh  test_vertex_json_input.py
backend/tests/: conftest.py  test_analysis.py  test_gcs_service.py  test_ma.py  test_projects.py  test_upload.py
(+145 files in other folders)
